jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins # ต้องตรงกับ label ใน Deployment
  ports:
    - protocol: TCP
      port: 8000         # Port ของ Service
      targetPort: 8000   # Port ของ Pod ที่ต้องการส่งไปหา
  type: ClusterIP      # ใช้เรียกกันเองภายใน Cluster
